2013-12-04  Hirochika Asai  <asai@scyphus.co.jp>

    * las/arch/x86_64/reg.h: Fixed the definition of op_reg enum

    * las/arch/x86_64/main.c: Implemented ModR/M and SIB encoder
    * las/arch/x86_64/eval.h: Implemented ModR/M and SIB encoder


2013-12-03  Hirochika Asai  <asai@scyphus.co.jp>

    * las/arch/x86_64/reg.c: Added EIP and RIP registers
    * las/arch/x86_64/reg.h: Added EIP and RIP registers


2013-11-29  Hirochika Asai  <asai@scyphus.co.jp>

    * las/arch/x86_64/eval.c: Implemented the address operand evaluator
    * las/arch/x86_64/eval.h: Implemented the address operand evaluator
    * las/arch/x86_64/main.c: Added a print statement for unknown instruction

    * las/arch/x86_64/main.c: Implemented the POPCNT instruction


2013-11-28  Hirochika Asai  <asai@scyphus.co.jp>

    * las/arch/x86_64/eval.c: Implemented operand evaluator for register and
                              immediate operands
    * las/arch/x86_64/eval.h: Implemented operand evaluator for register and
                              immediate operands
    * las/arch/x86_64/main.c: Implementing assembler functions for MOV and XOR
                              instructions and added the description of JMP
                              instruction


2013-11-27  Hirochika Asai  <asai@scyphus.co.jp>

    * las/arch/x86_64/reg.c: Implemented regsize() to get the effective size of
                             the register
    * las/arch/x86_64/reg.h: Added regsize()

    * las/arch/x86_64/reg.c: Added MM0-MM7 and XMM0-XMM7
    * las/arch/x86_64/reg.h: Added MM0-MM7 and XMM0-XMM7


2013-11-26  Hirochika Asai  <asai@scyphus.co.jp>

    * las/arch/x86_64/reg.c: Moved register-related functions from
                             las/arch/x86_64/main.c
    * las/arch/x86_64/reg.h: Moved register-related definitions from
                             las/arch/x86_64/main.c

    * las/arch/x86_64/eval.c: Moved operand evaluation related functions from